fixed resize and horizontal scrollbar

--- a/src/styles/characterList.module.css
+++ b/src/styles/characterList.module.css
@@ -1,7 +1,7 @@
 .charList {
     overflow-y: scroll;
     overflow-x: hidden;
-    max-height: 1000px;
+    max-height: 80vh;
     align-items: center;
     position: relative;
 }
